# incident-reporter

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: config.yaml
src/incident_reporter/: api.py  config.py  logging.py  main.py  models.py  pipeline.py  reporter.py  scheduler.py  storage.py
templates/: report.html.j2
tests/: test_api.py  test_html_report.py  test_reporter.py  test_storage.py
